# serializer version: 1
# name: test_nonreserved_keyword_ok[select_kw_date_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	abc
          as_alias
            ident	date
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_column]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	date
          as_alias
            ident	abc
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_double]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	date
          as_alias
            ident	date
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_format_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	abc
          as_alias
            ident	format
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_format_column]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	format
          as_alias
            ident	abc
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_percent_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	abc
          as_alias
            ident	percent
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_percent_column]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	percent
          as_alias
            ident	abc
  
  '''
# ---
